# mtsprz

./: .env.example  .gitignore  README.md  astro.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vercel.json
.codebase-memory/: ADR.md
chile-client-acquisition-plan-2026/: 01-resumen-ejecutivo.md  02-analisis-mercado.md  03-buyer-personas.md  04-propuesta-valor.md  05-estrategias-generales.md  06-tacticas-especificas.md  07-cronograma-implementacion.md  08-metricas-kpis.md  09-presupuesto-recursos.md
migrations/: 001_initial.sql  002_add_signing_token.sql  003_biometric_verification.sql  004_contract_legal_fields.sql  (+7 more)
scripts/prospector/: .gitignore  README.md  pyproject.toml
scripts/prospector/data/: campaign_log.json  prospects.json
scripts/prospector/src/prospector/: __init__.py  main.py
scripts/prospector/src/prospector/core/: __init__.py  config.py  database.py  logger.py  models.py
scripts/prospector/src/prospector/enrichers/: __init__.py  digital_presence.py
scripts/prospector/src/prospector/exporters/: __init__.py  csv_exporter.py
scripts/prospector/src/prospector/importers/: __init__.py  csv_importer.py
scripts/prospector/src/prospector/outreach/: __init__.py  email_campaign.py  whatsapp_campaign.py
scripts/prospector/src/prospector/scrapers/: __init__.py  base.py  chilerut.py  google_maps.py  google_search.py  web_scraper.py  yelu.py
scripts/prospector/src/prospector/utils/: __init__.py  dedup.py  stats.py
scripts/prospector/src/prospector/validators/: __init__.py  email.py  phone.py  rut.py
src/: env.d.ts  (+2 more)
(+126 files in other folders)
